--- a/app/src/main/res/layout/activity_edit_profile.xml
+++ b/app/src/main/res/layout/activity_edit_profile.xml
@@ -1,140 +1,165 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
-    <ImageView
-        android:id="@+id/cover_image"
+    <android.support.design.widget.AppBarLayout
+        android:id="@+id/app_bar"
         android:layout_width="match_parent"
-        android:layout_height="@dimen/profile_cover_img_height"
-        android:scaleType="centerCrop"
-        android:src="@drawable/profile_background" />
+        android:layout_height="wrap_content">
 
-    <mastersunny.rooms.utils.CircleImageView
-        android:id="@+id/profile_image"
-        android:layout_width="100dp"
-        android:layout_height="100dp"
-        android:layout_centerHorizontal="true"
-        android:layout_marginTop="@dimen/margin_30"
-        android:src="@drawable/profile_image" />
-
-    <ImageView
-        android:id="@+id/back_button"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginLeft="@dimen/margin_10"
-        android:layout_marginTop="@dimen/margin_20"
-        android:background="?selectableItemBackground"
-        android:padding="@dimen/margin_10"
-        app:srcCompat="@drawable/ic_chevron_left_black_24dp" />
-
-    <ImageView
-        android:id="@+id/change_profile_image"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignParentRight="true"
-        android:layout_marginRight="@dimen/margin_20"
-        android:layout_marginTop="?android:actionBarSize"
-        android:background="?selectableItemBackground"
-        android:padding="@dimen/margin_10"
-        app:srcCompat="@drawable/ic_edit_black_24dp" />
+        <android.support.v7.widget.Toolbar
+            android:id="@+id/toolbar"
+            android:layout_width="match_parent"
+            android:layout_height="?android:attr/actionBarSize">
 
 
-    <android.support.v4.widget.NestedScrollView
-        android:id="@+id/nestedScrollView"
+        </android.support.v7.widget.Toolbar>
+
+    </android.support.design.widget.AppBarLayout>
+
+    <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_below="@+id/cover_image"
-        android:layout_marginTop="@dimen/margin_10"
+        android:background="@android:color/white"
+        android:orientation="vertical"
+        android:paddingStart="16dp"
+        android:paddingTop="16dp"
+        android:paddingEnd="16dp"
+        android:paddingBottom="16dp"
         app:layout_behavior="@string/appbar_scrolling_view_behavior">
 
-        <LinearLayout
-            android:id="@+id/profile_info_layout"
+        <com.ornach.richtext.RichEditText
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:layout_marginLeft="@dimen/margin_10"
-            android:layout_marginRight="@dimen/margin_10"
-            android:layout_marginTop="@dimen/margin_20"
-            android:orientation="vertical">
+            android:layout_height="wrap_content"
+            android:layout_marginTop="8dp"
+            android:drawableLeft="@drawable/edt_email_bg"
+            android:hint="Email"
+            android:maxLines="1"
+            android:padding="16dp"
+            android:textColor="@color/grey_lite"
+            android:textSize="12sp"
+            app:rt_backgroundColor="#E4E4E4"
+            app:rt_borderColor="@android:color/transparent"
+            app:rt_borderWidth="1dp"
+            app:rt_radius="45dp" />
 
-            <LinearLayout
-                android:layout_width="match_parent"
+        <com.ornach.richtext.RichEditText
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="8dp"
+            android:drawableLeft="@drawable/edt_email_bg"
+            android:hint="+880*********"
+            android:maxLines="1"
+            android:padding="16dp"
+            android:textColor="@color/grey_lite"
+            android:textSize="12sp"
+            app:rt_backgroundColor="#E4E4E4"
+            app:rt_borderColor="@android:color/transparent"
+            app:rt_borderWidth="1dp"
+            app:rt_radius="45dp" />
+
+        <com.ornach.richtext.RichEditText
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="8dp"
+            android:drawableLeft="@drawable/edt_email_bg"
+            android:hint="Name"
+            android:maxLines="1"
+            android:padding="16dp"
+            android:textColor="@color/grey_lite"
+            android:textSize="12sp"
+            app:rt_backgroundColor="#E4E4E4"
+            app:rt_borderColor="@android:color/transparent"
+            app:rt_borderWidth="1dp"
+            app:rt_radius="45dp" />
+
+        <RadioGroup
+            android:id="@+id/radioSex"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="8dp">
+
+            <RadioButton
+                android:id="@+id/radioMale"
+                android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:orientation="horizontal"
-                android:weightSum="2">
+                android:checked="true"
+                android:text="Male" />
 
-                <android.support.design.widget.TextInputLayout
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:layout_weight="1">
+            <RadioButton
+                android:id="@+id/radioFemale"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Female" />
 
-                    <EditText
-                        android:id="@+id/first_name"
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:layout_marginBottom="10dp"
-                        android:hint="First Name"
-                        android:inputType="text"
-                        android:textAppearance="?android:attr/textAppearanceSmall"
-                        android:textColor="@android:color/black"
-                        android:textColorHint="@android:color/black" />
-                </android.support.design.widget.TextInputLayout>
+        </RadioGroup>
 
-                <android.support.design.widget.TextInputLayout
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:layout_weight="1">
+        <com.ornach.richtext.RichEditText
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="8dp"
+            android:drawableLeft="@drawable/edt_email_bg"
+            android:hint="Your city of Residence"
+            android:maxLines="1"
+            android:padding="16dp"
+            android:textColor="@color/grey_lite"
+            android:textSize="12sp"
+            app:rt_backgroundColor="#E4E4E4"
+            app:rt_borderColor="@android:color/transparent"
+            app:rt_borderWidth="1dp"
+            app:rt_radius="45dp" />
 
-                    <EditText
-                        android:id="@+id/last_name"
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:layout_marginBottom="10dp"
-                        android:hint="Last Name"
-                        android:inputType="text"
-                        android:textAppearance="?android:attr/textAppearanceSmall"
-                        android:textColor="@android:color/black"
-                        android:textColorHint="@android:color/black" />
-                </android.support.design.widget.TextInputLayout>
-            </LinearLayout>
+        <com.ornach.richtext.RichEditText
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="8dp"
+            android:drawableLeft="@drawable/edt_email_bg"
+            android:hint="City on your ID Card"
+            android:maxLines="1"
+            android:padding="16dp"
+            android:textColor="@color/grey_lite"
+            android:textSize="12sp"
+            app:rt_backgroundColor="#E4E4E4"
+            app:rt_borderColor="@android:color/transparent"
+            app:rt_borderWidth="1dp"
+            app:rt_radius="45dp" />
 
-            <android.support.design.widget.TextInputLayout
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content">
+        <com.ornach.richtext.RichEditText
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="8dp"
+            android:drawableLeft="@drawable/edt_email_bg"
+            android:hint="Your Birthday"
+            android:maxLines="1"
+            android:padding="16dp"
+            android:textColor="@color/grey_lite"
+            android:textSize="12sp"
+            app:rt_backgroundColor="#E4E4E4"
+            app:rt_borderColor="@android:color/transparent"
+            app:rt_borderWidth="1dp"
+            app:rt_radius="45dp" />
 
-                <EditText
-                    android:id="@+id/email"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:layout_marginBottom="10dp"
-                    android:hint="Email"
-                    android:inputType="textEmailAddress"
-                    android:textAppearance="?android:attr/textAppearanceSmall"
-                    android:textColor="@android:color/black"
-                    android:textColorHint="@android:color/black" />
-            </android.support.design.widget.TextInputLayout>
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_weight="1">
 
             <Button
-                android:id="@+id/save_change"
-                android:layout_width="fill_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="@dimen/margin_20"
-                android:background="@color/colorAccent"
-                android:text="Save"
-                android:textColor="@android:color/white" />
+                android:layout_width="match_parent"
+                android:layout_height="40dp"
+                android:layout_gravity="bottom"
+                android:layout_marginStart="16dp"
+                android:layout_marginTop="16dp"
+                android:layout_marginEnd="16dp"
+                android:background="@color/background_color"
+                android:text="Logout"
+                android:textSize="12sp" />
 
-            <Button
-                android:id="@+id/change_phone_number"
-                android:layout_width="fill_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="@dimen/margin_10"
-                android:background="@null"
-                android:text="@string/change_phone_number"
-                android:textAllCaps="false"
-                android:textColor="@color/colorAccent" />
         </LinearLayout>
-    </android.support.v4.widget.NestedScrollView>
 
-    <include layout="@layout/progress_layout" />
-</RelativeLayout>
+    </LinearLayout>
+
+</android.support.design.widget.CoordinatorLayout>
