--- a/app/src/main/res/layout/activity_edit_profile.xml
+++ b/app/src/main/res/layout/activity_edit_profile.xml
@@ -50,7 +50,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginTop="8dp"
-            android:drawableLeft="@drawable/edt_email_bg"
+            android:drawableLeft="@drawable/edt_phone_bg"
             android:hint="+880*********"
             android:maxLines="1"
             android:padding="16dp"
@@ -65,7 +65,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginTop="8dp"
-            android:drawableLeft="@drawable/edt_email_bg"
+            android:drawableLeft="@drawable/edt_name_bg"
             android:hint="Name"
             android:maxLines="1"
             android:padding="16dp"
@@ -101,7 +101,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginTop="8dp"
-            android:drawableLeft="@drawable/edt_email_bg"
+            android:drawableLeft="@drawable/edt_home_bg"
             android:hint="Your city of Residence"
             android:maxLines="1"
             android:padding="16dp"
@@ -116,7 +116,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginTop="8dp"
-            android:drawableLeft="@drawable/edt_email_bg"
+            android:drawableLeft="@drawable/edt_id_bg"
             android:hint="City on your ID Card"
             android:maxLines="1"
             android:padding="16dp"
@@ -131,7 +131,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginTop="8dp"
-            android:drawableLeft="@drawable/edt_email_bg"
+            android:drawableLeft="@drawable/edt_birthday_bg"
             android:hint="Your Birthday"
             android:maxLines="1"
             android:padding="16dp"
