--- a/app/src/main/res/drawable/edt_birthday_bg.xml
+++ b/app/src/main/res/drawable/edt_birthday_bg.xml
@@ -5,7 +5,7 @@
     <item
         android:width="18dp"
         android:height="18dp"
-        android:drawable="@drawable/ic_envelope"
+        android:drawable="@drawable/ic_cake"
         android:gravity="center_vertical|start"
         android:right="20dp" />
 
