--- a/app/src/main/res/layout/activity_room_search.xml
+++ b/app/src/main/res/layout/activity_room_search.xml
@@ -26,28 +26,12 @@
                     android:layout_centerVertical="true"
                     app:srcCompat="@drawable/ic_back" />
 
-                <com.ornach.richtext.RichEditText
-                    android:id="@+id/edt_place_search"
+                <android.support.v7.widget.SearchView
+                    android:id="@+id/search_view"
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
-                    android:layout_marginStart="10dp"
-                    android:layout_marginEnd="10dp"
-                    android:layout_toStartOf="@+id/img_cross"
-                    android:layout_toEndOf="@+id/img_back"
-                    android:background="@null"
-                    android:hint="@string/search_text"
-                    android:maxLines="1"
-                    android:textSize="12sp" />
-
-                <ImageView
-                    android:id="@+id/img_cross"
-                    android:layout_width="16dp"
-                    android:layout_height="16dp"
-                    android:layout_alignParentEnd="true"
-                    android:layout_centerVertical="true"
-                    android:layout_marginEnd="10dp"
-                    android:visibility="gone"
-                    app:srcCompat="@drawable/ic_cross_out" />
+                    android:layout_toRightOf="@+id/img_back"
+                    android:queryHint="@string/search_text" />
 
             </RelativeLayout>
 
