--- a/app/src/main/res/layout/activity_room_search.xml
+++ b/app/src/main/res/layout/activity_room_search.xml
@@ -43,6 +43,7 @@
             android:background="#E4E4E4" />
 
         <LinearLayout
+            android:id="@+id/room_search_header"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginTop="5dp"
@@ -140,32 +141,6 @@
         android:orientation="vertical"
         app:layout_behavior="@string/appbar_scrolling_view_behavior">
 
-        <!--<LinearLayout-->
-        <!--android:layout_width="match_parent"-->
-        <!--android:layout_height="wrap_content"-->
-        <!--android:layout_marginTop="10dp"-->
-        <!--android:background="@android:color/white"-->
-        <!--android:orientation="horizontal"-->
-        <!--android:paddingStart="16dp"-->
-        <!--android:paddingTop="16dp"-->
-        <!--android:paddingEnd="16dp"-->
-        <!--android:paddingBottom="16dp">-->
-
-        <!--<TextView-->
-        <!--android:layout_width="wrap_content"-->
-        <!--android:layout_height="wrap_content"-->
-        <!--android:layout_gravity="center_vertical"-->
-        <!--android:layout_weight="1"-->
-        <!--android:text="Current Location" />-->
-
-        <!--<ImageView-->
-        <!--android:layout_width="wrap_content"-->
-        <!--android:layout_height="wrap_content"-->
-        <!--android:layout_gravity="center_vertical"-->
-        <!--app:srcCompat="@drawable/ic_navigation" />-->
-
-        <!--</LinearLayout>-->
-
         <FrameLayout
             android:id="@+id/content"
             android:layout_width="match_parent"
@@ -175,8 +150,7 @@
             android:id="@+id/place_rv"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:layout_marginTop="?android:attr/actionBarSize"
-            android:background="@color/grey_lite"
+            android:background="#E4E4E4"
             android:visibility="gone" />
 
     </RelativeLayout>
