--- a/app/src/main/res/layout/activity_splash2.xml
+++ b/app/src/main/res/layout/activity_splash2.xml
@@ -32,7 +32,7 @@
             android:layout_centerInParent="true"
             android:layout_marginStart="16dp"
             android:layout_marginEnd="16dp"
-            android:background="@color/colorPrimary"
+            android:background="@drawable/button_selector"
             android:text="Login with Phone Number"
             android:textColor="@android:color/white"
             android:textSize="18sp" />
