bottom sheet behavior changes

--- a/app/src/main/res/layout/activity_room_details.xml
+++ b/app/src/main/res/layout/activity_room_details.xml
@@ -6,11 +6,12 @@
     android:layout_height="match_parent"
     android:fitsSystemWindows="true">
 
-    <RelativeLayout
+    <FrameLayout
         android:id="@+id/app_bar"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
+        android:layout_height="wrap_content"
         android:fitsSystemWindows="true">
+
 
         <android.support.v7.widget.RecyclerView
             android:id="@+id/room_images"
@@ -22,9 +23,10 @@
             android:layout_width="match_parent"
             android:layout_height="?attr/actionBarSize" />
 
-    </RelativeLayout>
+    </FrameLayout>
 
     <android.support.v4.widget.NestedScrollView
+        android:id="@+id/bottom_sheet"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:background="#e4e4e4"
@@ -589,4 +591,15 @@
         </LinearLayout>
 
     </android.support.v4.widget.NestedScrollView>
+
+    <android.support.design.widget.FloatingActionButton
+        android:id="@+id/fab"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center_horizontal|bottom"
+        android:layout_margin="16dp"
+        android:visibility="gone"
+        app:backgroundTint="@android:color/darker_gray"
+        app:srcCompat="@drawable/ic_cross_out" />
+
 </android.support.design.widget.CoordinatorLayout>
