--- a/app/src/main/res/layout/room_search_fragment_2.xml
+++ b/app/src/main/res/layout/room_search_fragment_2.xml
@@ -49,7 +49,8 @@
             android:paddingTop="16dp"
             android:paddingEnd="16dp"
             android:paddingBottom="16dp"
-            android:text="All Localities" />
+            android:text="All Localities"
+            android:textColor="@android:color/black" />
 
         <android.support.v7.widget.RecyclerView
             android:id="@+id/rv_places"
