working on room details

--- a/app/src/main/res/layout/fragment_bottom_sheet_dialog.xml
+++ b/app/src/main/res/layout/fragment_bottom_sheet_dialog.xml
@@ -45,6 +45,8 @@
             android:id="@+id/tv_all_review"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:foreground="?selectableItemBackground"
+            android:padding="3dp"
             android:text="See all reviews >"
             android:textColor="@android:color/holo_blue_dark" />
 
