--- a/app/src/main/res/layout/bottom_sheet.xml
+++ b/app/src/main/res/layout/bottom_sheet.xml
@@ -67,9 +67,10 @@
 
                     <LinearLayout
                         android:id="@+id/rating_layout"
-                        android:layout_width="match_parent"
+                        android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_marginTop="8dp"
+                        android:foreground="?selectableItemBackground"
                         android:orientation="horizontal">
 
                         <TextView
