--- a/app/src/main/res/layout/activity_edit_profile.xml
+++ b/app/src/main/res/layout/activity_edit_profile.xml
@@ -37,8 +37,9 @@
             android:layout_marginTop="8dp"
             android:drawableLeft="@drawable/edt_email_bg"
             android:hint="Email"
-            android:maxLines="1"
+            android:imeOptions="actionNext"
             android:padding="16dp"
+            android:singleLine="true"
             android:textColor="@color/grey_lite"
             android:textSize="12sp"
             app:rt_backgroundColor="#E4E4E4"
@@ -52,8 +53,9 @@
             android:layout_marginTop="8dp"
             android:drawableLeft="@drawable/edt_phone_bg"
             android:hint="+880*********"
-            android:maxLines="1"
+            android:imeOptions="actionNext"
             android:padding="16dp"
+            android:singleLine="true"
             android:textColor="@color/grey_lite"
             android:textSize="12sp"
             app:rt_backgroundColor="#E4E4E4"
@@ -67,8 +69,9 @@
             android:layout_marginTop="8dp"
             android:drawableLeft="@drawable/edt_name_bg"
             android:hint="Name"
-            android:maxLines="1"
+            android:imeOptions="actionNext"
             android:padding="16dp"
+            android:singleLine="true"
             android:textColor="@color/grey_lite"
             android:textSize="12sp"
             app:rt_backgroundColor="#E4E4E4"
@@ -103,8 +106,9 @@
             android:layout_marginTop="8dp"
             android:drawableLeft="@drawable/edt_home_bg"
             android:hint="Your city of Residence"
-            android:maxLines="1"
+            android:imeOptions="actionNext"
             android:padding="16dp"
+            android:singleLine="true"
             android:textColor="@color/grey_lite"
             android:textSize="12sp"
             app:rt_backgroundColor="#E4E4E4"
@@ -118,8 +122,9 @@
             android:layout_marginTop="8dp"
             android:drawableLeft="@drawable/edt_id_bg"
             android:hint="City on your ID Card"
-            android:maxLines="1"
+            android:imeOptions="actionNext"
             android:padding="16dp"
+            android:singleLine="true"
             android:textColor="@color/grey_lite"
             android:textSize="12sp"
             app:rt_backgroundColor="#E4E4E4"
@@ -133,8 +138,9 @@
             android:layout_marginTop="8dp"
             android:drawableLeft="@drawable/edt_birthday_bg"
             android:hint="Your Birthday"
-            android:maxLines="1"
+            android:imeOptions="actionDone"
             android:padding="16dp"
+            android:singleLine="true"
             android:textColor="@color/grey_lite"
             android:textSize="12sp"
             app:rt_backgroundColor="#E4E4E4"
