--- a/app/src/main/res/layout/saved_fragment_layout.xml
+++ b/app/src/main/res/layout/saved_fragment_layout.xml
@@ -15,6 +15,15 @@
             android:layout_width="match_parent"
             android:layout_height="?android:attr/actionBarSize">
 
+            <TextView
+                android:id="@+id/toolbar_title"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_centerHorizontal="true"
+                android:layout_gravity="center_horizontal"
+                android:text="Your Saved Rooms"
+                android:textColor="@android:color/black" />
+
 
         </android.support.v7.widget.Toolbar>
 
@@ -23,6 +32,7 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
+        android:layout_marginBottom="60dp"
         android:background="#E4E4E4"
         android:orientation="vertical"
         app:layout_behavior="@string/appbar_scrolling_view_behavior">
