--- a/app/src/main/res/layout/home_banner_layout.xml
+++ b/app/src/main/res/layout/home_banner_layout.xml
@@ -4,10 +4,10 @@
     android:layout_height="match_parent">
 
     <ImageView
-        android:id="@+id/store_image"
+        android:id="@+id/image"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
+        android:layout_height="250dp"
         android:scaleType="centerCrop"
-        android:src="@drawable/deli_grocery_bg" />
+        android:src="@drawable/dummy_image2" />
 
 </RelativeLayout>
