--- a/app/src/main/res/layout/activity_item_details.xml
+++ b/app/src/main/res/layout/activity_item_details.xml
@@ -51,7 +51,7 @@
                 android:layout_marginTop="@dimen/margin_10">
 
                 <ImageView
-                    android:id="@+id/store_image"
+                    android:id="@+id/image"
                     android:layout_width="100dp"
                     android:layout_height="80dp"
                     android:scaleType="fitXY"
@@ -63,7 +63,7 @@
                     android:layout_height="wrap_content"
                     android:layout_centerVertical="true"
                     android:layout_marginLeft="@dimen/margin_20"
-                    android:layout_toRightOf="@+id/store_image"
+                    android:layout_toRightOf="@+id/image"
                     android:text="Amazon"
                     android:textColor="@color/white" />
             </RelativeLayout>
