--- a/app/src/main/res/layout/home_header_item_layout.xml
+++ b/app/src/main/res/layout/home_header_item_layout.xml
@@ -4,11 +4,23 @@
     android:layout_width="match_parent"
     android:layout_height="250dp">
 
-    <ImageView
+    <com.smarteist.autoimageslider.SliderView
+        android:id="@+id/slider_view"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:scaleType="centerCrop"
-        android:src="@drawable/room2" />
+        android:layout_height="250dp"
+        app:sliderAnimationDuration="600"
+        app:sliderAutoCycleDirection="back_and_forth"
+        app:sliderAutoCycleEnabled="true"
+        app:sliderIndicatorAnimationDuration="600"
+        app:sliderIndicatorGravity="center_horizontal|bottom"
+        app:sliderIndicatorMargin="15dp"
+        app:sliderIndicatorOrientation="horizontal"
+        app:sliderIndicatorPadding="3dp"
+        app:sliderIndicatorRadius="2dp"
+        app:sliderIndicatorSelectedColor="#5A5A5A"
+        app:sliderIndicatorUnselectedColor="#FFF"
+        app:sliderScrollTimeInSec="1"
+        app:sliderStartAutoCycle="true" />
 
     <android.support.v7.widget.Toolbar
         android:id="@+id/toolbar"
