--- a/app/src/main/res/layout/store_details_layout_header.xml
+++ b/app/src/main/res/layout/store_details_layout_header.xml
@@ -28,7 +28,7 @@
         android:layout_marginTop="@dimen/margin_10">
 
         <ImageView
-            android:id="@+id/store_image"
+            android:id="@+id/image"
             android:layout_width="100dp"
             android:layout_height="80dp"
             android:scaleType="fitXY" />
@@ -38,7 +38,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginLeft="@dimen/margin_20"
-            android:layout_toRightOf="@id/store_image"
+            android:layout_toRightOf="@id/image"
             android:background="@drawable/follow_background">
 
             <TextView
@@ -60,6 +60,6 @@
             android:layout_below="@+id/follow_layout"
             android:layout_marginLeft="@dimen/margin_20"
             android:layout_marginTop="@dimen/margin_10"
-            android:layout_toRightOf="@+id/store_image" />
+            android:layout_toRightOf="@+id/image" />
     </RelativeLayout>
 </RelativeLayout>
