--- a/app/src/main/res/layout/transaction_layout.xml
+++ b/app/src/main/res/layout/transaction_layout.xml
@@ -16,7 +16,7 @@
         android:padding="@dimen/margin_10">
 
         <ImageView
-            android:id="@+id/store_image"
+            android:id="@+id/image"
             android:layout_width="100dp"
             android:layout_height="100dp"
             android:src="@drawable/deli_grocery_m" />
@@ -26,7 +26,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginLeft="@dimen/margin_10"
-            android:layout_toRightOf="@+id/store_image"
+            android:layout_toRightOf="@+id/image"
             android:ellipsize="end"
             android:maxLines="4"
             android:text="This offer has a description of 100.This offer has a description of 100. This offer has a description of 100" />
@@ -35,7 +35,7 @@
             android:id="@+id/offer_date_layout"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_below="@+id/store_image"
+            android:layout_below="@+id/image"
             android:orientation="horizontal"
             android:weightSum="2">
 
